# Project_9

./: README.md
Project_9/: asgi.py  db.sqlite3  manage.py  pyproject.toml  requirements.txt  urls.py
Project_9/Project_9/: README.md  settings.py  urls.py
Project_9/Project_9/Project_9/: settings.py  wsgi.py
Project_9/Project_9/projects/: admin.py  permissions.py  urls.py
Project_9/Project_9/users/: views.py
Project_9/projects/: models.py  permissions.py  serializers.py  urls.py  views.py
Project_9/projects/migrations/: 0001_initial.py
Project_9/users/: admin.py  models.py  serializers.py  urls.py  views.py
Project_9/users/migrations/: 0001_initial.py
